# machbb

./: .gitignore  README.md  machbb  pyproject.toml  train.sh
.github/workflows/: ci.yml  mirror.yml
.opencode/agents/: assistant.md  git-manager.md  guile-helper.json  machbb-agent.json
machbb/: __init__.py  __main__.py  cli.py
modules/machbb/: bootstrap.scm  build.scm  cli.scm  config.scm  util.scm
