[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machbb"
version = "0.1.0"
description = "mach, but better — build tool for Firefox/IceCat/Acreedom"
authors = [
    {name = "Natalie", email = "natalie@acreetionos.org"}
]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
machbb = "machbb.cli:cli"

[tool.setuptools.packages.find]
include = ["machbb*"]
